chore: run benchmark in CI (#18)

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,6 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
 
 jobs:
   go-lint:
@@ -47,43 +46,65 @@ jobs:
       run: | 
         go test -v -coverprofile=coverage.out ./... 
     
-  # basic-benchmarks:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
+  basic-benchmarks:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
 
-  #   - name: Set up Go
-  #     uses: actions/setup-go@v3
-  #     with:
-  #       go-version: 1.24
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.24
 
-  #   - name: Install project dependencies
-  #     run: | 
-  #       go mod download
+    - name: Set up Rust
+      uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4 # v1.11.0
 
-  #   - name: Download geth and reth
-  #     run: | 
-  #       # https://github.com/paradigmxyz/reth/releases/download/v1.3.4/reth-v1.3.4-x86_64-unknown-linux-gnu.tar.gz
-  #       # 62e5e435d1e981f97fff76f638fdf7cc4b9dbcbed66fcb10c4be6bd9d0dfd0ba  /Users/meyer9/Downloads/reth-v1.3.4-x86_64-unknown-linux-gnu.tar.gz.asc
-  #       # Install from github.com/ethereum-optimism/op-geth
+    - name: Install project dependencies
+      run: | 
+        go mod download
 
-  #       wget https://github.com/paradigmxyz/reth/releases/download/v1.3.4/reth-v1.3.4-x86_64-unknown-linux-gnu.tar.gz
-  #       echo "62e5e435d1e981f97fff76f638fdf7cc4b9dbcbed66fcb10c4be6bd9d0dfd0ba  reth-v1.3.4-x86_64-unknown-linux-gnu.tar.gz" | shasum -a 256 -c
-  #       tar -xvf reth-v1.3.4-x86_64-unknown-linux-gnu.tar.gz # contains ./reth
-  #       chmod +x ./reth
+    - name: Cache binaries
+      uses: actions/cache@v3
+      id: cache-bin
+      with:
+        path: ${{ runner.temp }}/bin
+        key: ${{ runner.os }}-binaries
 
-  #       git clone https://github.com/ethereum-optimism/op-geth
-  #       cd op-geth
-  #       git checkout --force 4bc345b22fbee14d3162becd197373a9565b7c6d
-  #       make geth
-  #       cp ./build/bin/geth ..
-  #       cd ..
-  #       chmod +x ./geth
+    - name: Download geth and reth
+      if: steps.cache-bin.outputs.cache-hit != 'true'
+      run: | 
+        mkdir -p ${{ runner.temp }}/bin
 
-  #       ls -la
+        git clone https://github.com/paradigmxyz/reth
+        git -C reth checkout --force fad870e3508adcc150faa4554111368e0e16f43b
+        
+        pushd reth
+        cargo build --features asm-keccak --profile release --bin op-reth --manifest-path crates/optimism/bin/Cargo.toml
+        cp ./target/release/op-reth ${{ runner.temp }}/bin/reth
+        popd
+        chmod +x ${{ runner.temp }}/bin/reth
 
-  #   - name: Run Basic Benchmarks
-  #     id: unit
-  #     run: | 
-  #       mkdir ./data-dir
-  #       go run benchmark/cmd/main.go --log.level debug run --config ./configs/basic.yml --root-dir ./data-dir --reth-bin ./reth --geth-bin ./geth
+        git clone https://github.com/ethereum-optimism/op-geth
+        git -C op-geth checkout --force 4bc345b22fbee14d3162becd197373a9565b7c6d
+
+        pushd op-geth
+        make geth
+        cp ./build/bin/geth ${{ runner.temp }}/bin/geth
+        chmod +x ${{ runner.temp }}/bin/geth
+        popd
+
+        echo "binaries compiled:"
+        ls -la ${{ runner.temp }}/bin
+
+    - name: Run Basic Benchmarks
+      id: unit
+      run: | 
+        mkdir ${{ runner.temp }}/data-dir
+        mkdir ${{ runner.temp }}/output
+        go run benchmark/cmd/main.go \
+          --log.level debug \
+          run \
+          --config ./configs/basic-reth.yml \
+          --root-dir ${{ runner.temp }}/data-dir \
+          --reth-bin ${{ runner.temp }}/bin/reth \
+          --geth-bin ${{ runner.temp }}/bin/geth
