Add output directory and capture logs on each run (#15)
* feat: write benchmark output to new directory

* Move file names into constants

* Add output dir to test run

* Fix lint errors

* address comments

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -106,5 +106,6 @@ jobs:
           run \
           --config ./configs/basic-reth.yml \
           --root-dir ${{ runner.temp }}/data-dir \
+          --output-dir ${{ runner.temp }}/output \
           --reth-bin ${{ runner.temp }}/bin/reth \
           --geth-bin ${{ runner.temp }}/bin/geth
