feat: add sequencer benchmark (#21)
* feat: add sequencer benchmark

Run both geth and reth and fix validator test

Clean up common code and lint

Temp disable output dir

* Simplify validator code

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,9 @@ jobs:
         go test -v -coverprofile=coverage.out ./... 
     
   basic-benchmarks:
+    strategy:
+      matrix:
+        node-type: [reth, geth]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -104,7 +107,7 @@ jobs:
         go run benchmark/cmd/main.go \
           --log.level debug \
           run \
-          --config ./configs/basic-reth.yml \
+          --config ./configs/basic-${{ matrix.node-type }}.yml \
           --root-dir ${{ runner.temp }}/data-dir \
           --output-dir ${{ runner.temp }}/output \
           --reth-bin ${{ runner.temp }}/bin/reth \
