--- a/configs/basic-reth.yml
+++ b/configs/basic-reth.yml
@@ -5,7 +5,7 @@
   variables:
     - type: transaction_workload
       values:
-        - tool:tx-fuzz
+        - transfer-only
     - type: node_type
       values:
         - reth
