feat: Improve README and remove unnecessary param (#34)

--- a/configs/basic.yml
+++ b/configs/basic.yml
@@ -1,7 +1,5 @@
-- name: Test op-reth Performance
-  description: Reth Execution Speed
-  benchmark:
-    - sequencer
+- name: Test Performance
+  description: Execution Speed
   variables:
     - type: transaction_workload
       values:
