fix: remove hardcoded gas limit (#38)
- can use the gaslimit param now
- updating log level for tests
- lowering gas limit for tests

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -102,7 +102,7 @@ jobs:
         mkdir ${{ runner.temp }}/data-dir
         mkdir ${{ runner.temp }}/output
         go run benchmark/cmd/main.go \
-          --log.level debug \
+          --log.level info \
           run \
           --config ./configs/basic.yml \
           --root-dir ${{ runner.temp }}/data-dir \
