--- a/report/package.json
+++ b/report/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "description": "Visualization tool for base-bench metrics",
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "d3": "^7.8.5",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "swr": "^2.3.3"
+    "react-router-dom": "^7.5.1",
+    "swr": "^2.3.3",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
