feat: track transactions per block metric (#43)
Updates metric definitions and interface. Tracks in sequencer.

--- a/configs/tx-fuzz-geth.yml
+++ b/configs/tx-fuzz-geth.yml
@@ -1,5 +1,5 @@
-- name: Test geth Performance
-  description: Geth Execution Speed
+- name: TX-Fuzz Geth Performance
+  description: TX-Fuzz Geth Performance
   variables:
     - type: transaction_workload
       values:
@@ -8,5 +8,5 @@
       values:
         - geth
     - type: num_blocks
-      value: 2
+      value: 20
   
