feat: test custom smart contract transactions (#35)
This PR adds a new transaction payload worker.

It is a testing framework that lets you benchmark EVM chain performance using custom smart contracts.

Instead of writing complex test scenarios, compile your contract locally and provide the bytecode in the config.

All test functions must accept (uint256, bytes) parameters and include a getResult() function.

Configure calls per block, function signature, and inputs through YAML files.

Adds ec pairing FP test case to CI

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -109,3 +109,13 @@ jobs:
           --output-dir ${{ runner.temp }}/output \
           --reth-bin ${{ runner.temp }}/bin/reth \
           --geth-bin ${{ runner.temp }}/bin/geth
+    - name: Run Contract Benchmark
+      id: contract
+      run: | 
+        go run benchmark/cmd/main.go \
+          --log.level info \
+          run \
+          --config ./configs/contract.yml \
+          --root-dir ${{ runner.temp }}/data-dir \
+          --output-dir ${{ runner.temp }}/output \
+          --geth-bin ${{ runner.temp }}/bin/geth
