--- a/report/package.json
+++ b/report/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "vite build && vite preview",
-    "check": "eslint . --ext .ts,.tsx --fix && prettier --check ."
+    "check": "eslint . --ext .ts,.tsx --fix && prettier --check .",
+    "lint": "eslint . --ext .ts,.tsx --fix && prettier --write ."
   },
   "keywords": [],
   "author": "",
