--- a/.github/workflows/nodejs.yaml
+++ b/.github/workflows/nodejs.yaml
@@ -28,5 +28,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Check formatting
-        run: |
-          npm run check
+        run: npm run check
+      - name: Run tests
+        run: npm test
