--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,119 +3,132 @@ name: test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
 
 jobs:
   go-lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.24
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.24
 
-    - name: Install project dependencies
-      run: | 
-        go mod download
+      - name: Install project dependencies
+        run: |
+          go mod download
 
-    - name: Lint Go
-      uses: golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd # v7.0.0
-      with:
-        version: v2.0
+      - name: Lint Go
+        uses: golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd # v7.0.0
+        with:
+          version: v2.0
 
   go-test:
     outputs:
       COVERAGE: ${{ steps.unit.outputs.coverage }}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.24
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.24
 
-    - name: Install project dependencies
-      run: | 
-        go mod download
-    - name: Run Unit Tests
-      id: unit
-      run: | 
-        go test -v -coverprofile=coverage.out ./... 
-    
+      - name: Install project dependencies
+        run: |
+          go mod download
+      - name: Run Unit Tests
+        id: unit
+        run: |
+          go test -v -coverprofile=coverage.out ./...
+
   basic-benchmarks:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.24
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.24
 
-    - name: Set up Rust
-      uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4 # v1.11.0
+      - name: Set up Rust
+        uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4 # v1.11.0
 
-    - name: Install project dependencies
-      run: | 
-        go mod download
+      - name: Install project dependencies
+        run: |
+          go mod download
 
-    - name: Cache binaries
-      uses: actions/cache@v3
-      id: cache-bin
-      with:
-        path: ${{ runner.temp }}/bin
-        key: ${{ runner.os }}-binaries
+      - name: Cache binaries
+        uses: actions/cache@v3
+        id: cache-bin
+        with:
+          path: ${{ runner.temp }}/bin
+          key: ${{ runner.os }}-binaries
 
-    - name: Download geth and reth
-      if: steps.cache-bin.outputs.cache-hit != 'true'
-      run: | 
-        mkdir -p ${{ runner.temp }}/bin
+      - name: Download geth and reth
+        if: steps.cache-bin.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p ${{ runner.temp }}/bin
 
-        git clone https://github.com/paradigmxyz/reth
-        git -C reth checkout --force fad870e3508adcc150faa4554111368e0e16f43b
-        
-        pushd reth
-        cargo build --features asm-keccak --profile release --bin op-reth --manifest-path crates/optimism/bin/Cargo.toml
-        cp ./target/release/op-reth ${{ runner.temp }}/bin/reth
-        popd
-        chmod +x ${{ runner.temp }}/bin/reth
+          git clone https://github.com/paradigmxyz/reth
+          git -C reth checkout --force fad870e3508adcc150faa4554111368e0e16f43b
 
-        git clone https://github.com/ethereum-optimism/op-geth
-        git -C op-geth checkout --force 4bc345b22fbee14d3162becd197373a9565b7c6d
+          pushd reth
+          cargo build --features asm-keccak --profile release --bin op-reth --manifest-path crates/optimism/bin/Cargo.toml
+          cp ./target/release/op-reth ${{ runner.temp }}/bin/reth
+          popd
+          chmod +x ${{ runner.temp }}/bin/reth
 
-        pushd op-geth
-        make geth
-        cp ./build/bin/geth ${{ runner.temp }}/bin/geth
-        chmod +x ${{ runner.temp }}/bin/geth
-        popd
+          git clone https://github.com/ethereum-optimism/op-geth
+          git -C op-geth checkout --force 4bc345b22fbee14d3162becd197373a9565b7c6d
 
-        echo "binaries compiled:"
-        ls -la ${{ runner.temp }}/bin
+          pushd op-geth
+          make geth
+          cp ./build/bin/geth ${{ runner.temp }}/bin/geth
+          chmod +x ${{ runner.temp }}/bin/geth
+          popd
 
-    - name: Run Basic Benchmarks
-      id: unit
-      run: | 
-        mkdir ${{ runner.temp }}/data-dir
-        mkdir ${{ runner.temp }}/output
-        go run benchmark/cmd/main.go \
-          --log.level info \
-          run \
-          --config ./configs/basic.yml \
-          --root-dir ${{ runner.temp }}/data-dir \
-          --output-dir ${{ runner.temp }}/output \
-          --reth-bin ${{ runner.temp }}/bin/reth \
-          --geth-bin ${{ runner.temp }}/bin/geth
-    - name: Run Contract Benchmark
-      id: contract
-      run: | 
-        go run benchmark/cmd/main.go \
-          --log.level info \
-          run \
-          --config ./configs/contract.yml \
-          --root-dir ${{ runner.temp }}/data-dir \
-          --output-dir ${{ runner.temp }}/output \
-          --geth-bin ${{ runner.temp }}/bin/geth
+          echo "binaries compiled:"
+          ls -la ${{ runner.temp }}/bin
+
+      - name: Run op-program Benchmark
+        id: op-program
+        run: |
+          curl https://mise.run | sh
+          pushd op-program
+          mise x -- ./build.sh
+          popd
+          go run benchmark/cmd/main.go \
+            --log.level info \
+            run \
+            --config ./configs/proof-program.yml \
+            --root-dir ${{ runner.temp }}/data-dir \
+            --output-dir ${{ runner.temp }}/output \
+            --geth-bin ${{ runner.temp }}/bin/geth
+
+      - name: Run Basic Benchmarks
+        id: unit
+        run: |
+          go run benchmark/cmd/main.go \
+            --log.level info \
+            run \
+            --config ./configs/basic.yml \
+            --root-dir ${{ runner.temp }}/data-dir \
+            --output-dir ${{ runner.temp }}/output \
+            --reth-bin ${{ runner.temp }}/bin/reth \
+            --geth-bin ${{ runner.temp }}/bin/geth
+      - name: Run Contract Benchmark
+        id: contract
+        run: |
+          go run benchmark/cmd/main.go \
+            --log.level info \
+            run \
+            --config ./configs/contract.yml \
+            --root-dir ${{ runner.temp }}/data-dir \
+            --output-dir ${{ runner.temp }}/output \
+            --geth-bin ${{ runner.temp }}/bin/geth
