--- a/configs/ecpairing.yml
+++ b/configs/ecpairing.yml
@@ -1,17 +1,26 @@
-- name: EC Pairing Precompile
-  description: This shows that at 60% of gas target as input, geth fails but reth succeeds. Both get payload times are unacceptable (over 2s)
-  benchmark:
-    - sequencer
-  variables:
-    - type: transaction_workload
-      values:
-        - contract:1:ecpairing(uint256,bytes):600000000:0x:./contracts/precompiles.hex
-        - contract:1:ecpairing(uint256,bytes):700000000:0x:./contracts/precompiles.hex
-    - type: node_type
-      values:
-        - geth
-        - reth
-    - type: num_blocks
-      value: 5
-    - type: gas_limit
-      value: 1000000000
+payloads:
+  - name: EC Pairing Precompile
+    id: ecpairing
+    type: contract
+    calls_per_block: 1
+    function_signature: ecpairing(uint256,bytes)
+    gas_per_tx: 10000000
+
+benchmarks:
+  - name: EC Pairing Precompile
+    description: This shows that at 60% of gas target as input, geth fails but reth succeeds. Both get payload times are unacceptable (over 2s)
+    benchmark:
+      - sequencer
+    variables:
+      - type: payload
+        values:
+          - contract:1:ecpairing(uint256,bytes):600000000:0x:./contracts/precompiles.hex
+          - contract:1:ecpairing(uint256,bytes):700000000:0x:./contracts/precompiles.hex
+      - type: node_type
+        values:
+          - geth
+          - reth
+      - type: num_blocks
+        value: 5
+      - type: gas_limit
+        value: 1000000000
