--- a/configs/erc20.yml
+++ b/configs/erc20.yml
@@ -1,17 +1,24 @@
-- name: ERC 20 Workload
-  description: https://github.com/base/fp-test-cases/blob/main/src/ERC20Transfer.sol
-  benchmark:
-    - sequencer
-  variables:
-    - type: transaction_workload
-      values:
-        - contract:1:moveErc20(uint256,bytes):700000000:0x:./contracts/erc20.hex
-        - contract:1:moveErc20(uint256,bytes):1000000000:0x:./contracts/erc20.hex        
-    - type: node_type
-      values:
-        - geth
-        - reth
-    - type: num_blocks
-      value: 10
-    - type: gas_limit
-      value: 1000000000
+payloads:
+  - name: ERC 20 Workload
+    id: erc20
+    type: contract
+    calls_per_block: 1
+    function_signature: moveErc20(uint256,bytes)
+    gas_per_tx: 10000000
+
+benchmarks:
+  - name: ERC 20 Workload
+    description: https://github.com/base/fp-test-cases/blob/main/src/ERC20Transfer.sol
+    benchmark:
+      - sequencer
+    variables:
+      - type: payload
+        value: erc20
+      - type: node_type
+        values:
+          - geth
+          - reth
+      - type: num_blocks
+        value: 10
+      - type: gas_limit
+        value: 1000000000
