--- a/configs/public-benchmark.yml
+++ b/configs/public-benchmark.yml
@@ -1,67 +1,86 @@
-- name: Transfer-only execution speed
-  description: Transfer-only execution speed
-  variables:
-    - type: transaction_workload
-      values:
-        - transfer-only
-    - type: node_type
-      values:
-        - geth
-        - reth
-    - type: num_blocks
-      value: 10
-    - type: gas_limit
-      values:
-        - 15000000
-        - 30000000
-        - 60000000
-        - 90000000
-- name: EC Pairing Precompile
-  description: This shows that at 60% of gas target as input, geth fails but reth succeeds. Both get payload times are unacceptable (over 2s)
-  benchmark:
-    - sequencer
-  variables:
-    - type: node_type
-      values:
-        - geth
-        - reth
-    - type: num_blocks
-      value: 5
-    - type: gas_limit
-      value: 505000000
-    - type: transaction_workload
-      values:
-        - contract:1:ecpairing(uint256,bytes):200000000:0x:./contracts/precompiles.hex
-        - contract:1:ecpairing(uint256,bytes):400000000:0x:./contracts/precompiles.hex
-- name: EC Mul Precompile
-  description: https://github.com/base/fp-test-cases/blob/main/src/Precompiler.sol
-  benchmark:
-    - sequencer
-  variables:
-    - type: transaction_workload
-      values:
-        - contract:1:ecmul(uint256,bytes):1000000000:0x:./contracts/precompiles.hex
-    - type: node_type
-      values:
-        - geth
-        - reth
-    - type: num_blocks
-      value: 5
-    - type: gas_limit
-      value: 1005000000
-- name: SStore Performance
-  description: https://github.com/base/fp-test-cases/blob/main/src/Writer.sol
-  benchmark:
-    - sequencer
-  variables:
-    - type: transaction_workload
-      values:
-        - contract:1:writer(uint256,bytes):1000000000:0x:./contracts/precompiles.hex
-    - type: node_type
-      values:
-        - geth
-        - reth
-    - type: num_blocks
-      value: 5
-    - type: gas_limit
-      value: 1005000000
+payloads:
+  - name: Transfer-only
+    id: transfer-only
+    type: transfer-only
+  - name: EC Pairing Precompile
+    id: ecpairing
+    type: contract
+    calls_per_block: 1
+    function_signature: ecpairing(uint256,bytes)
+    gas_per_tx: 10000000
+  - name: EC Mul Precompile
+    id: ecmul
+    type: contract
+    calls_per_block: 1
+    function_signature: ecmul(uint256,bytes)
+    gas_per_tx: 10000000
+  - name: SStore Performance
+    id: sstore
+    type: contract
+    calls_per_block: 1
+    function_signature: sstore(uint256,bytes)
+    gas_per_tx: 10000000
+
+benchmarks:
+  - name: Transfer-only execution speed
+    description: Transfer-only execution speed
+    variables:
+      - type: payload
+        value: transfer-only
+      - type: node_type
+        values:
+          - geth
+          - reth
+      - type: num_blocks
+        value: 10
+      - type: gas_limit
+        values:
+          - 15000000
+          - 30000000
+          - 60000000
+          - 90000000
+  - name: EC Pairing Precompile
+    description: This shows that at 60% of gas target as input, geth fails but reth succeeds. Both get payload times are unacceptable (over 2s)
+    benchmark:
+      - sequencer
+    variables:
+      - type: node_type
+        values:
+          - geth
+          - reth
+      - type: num_blocks
+        value: 5
+      - type: gas_limit
+        value: 505000000
+      - type: payload
+        value: ecpairing
+  - name: EC Mul Precompile
+    description: https://github.com/base/fp-test-cases/blob/main/src/Precompiler.sol
+    benchmark:
+      - sequencer
+    variables:
+      - type: payload
+        value: ecmul
+      - type: node_type
+        values:
+          - geth
+          - reth
+      - type: num_blocks
+        value: 5
+      - type: gas_limit
+        value: 1005000000
+  - name: SStore Performance
+    description: https://github.com/base/fp-test-cases/blob/main/src/Writer.sol
+    benchmark:
+      - sequencer
+    variables:
+      - type: payload
+        value: sstore
+      - type: node_type
+        values:
+          - geth
+          - reth
+      - type: num_blocks
+        value: 5
+      - type: gas_limit
+        value: 1005000000
