--- a/configs/sload.yml
+++ b/configs/sload.yml
@@ -5,6 +5,7 @@ payloads:
     calls_per_block: 1
     function_signature: reader(uint256,bytes)
     gas_per_tx: 10000000
+    contract_bytecode: Precompile
 
 benchmarks:
   - name: SLoad Performance
