--- a/configs/sstore.yml
+++ b/configs/sstore.yml
@@ -5,6 +5,7 @@ payloads:
     calls_per_block: 1
     function_signature: writer(uint256,bytes)
     gas_per_tx: 10000000
+    contract_bytecode: Precompile
 
 benchmarks:
   - name: SStore Performance
