--- a/report/package.json
+++ b/report/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "Visualization tool for base-bench metrics",
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.4",
     "d3": "^7.8.5",
     "lodash": "^4.17.21",
