--- a/report/package.json
+++ b/report/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.4",
+    "clsx": "^2.1.1",
     "d3": "^7.8.5",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
