--- a/.github/workflows/examples.yaml
+++ b/.github/workflows/examples.yaml
@@ -1,14 +1,13 @@
-# Go test workflow
-name: test
+name: run-publish-benchmarks
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
+    branches: ["*"]
 
 jobs:
-  go-lint:
+  example-benchmarks:
     runs-on: ubuntu-latest
+
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
@@ -24,55 +23,6 @@ jobs:
         with:
           go-version: 1.24
 
-      - name: Install project dependencies
-        run: |
-          go mod download
-
-      - name: Lint Go
-        uses: golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd # v7.0.0
-        with:
-          version: v2.0
-
-  go-test:
-    outputs:
-      COVERAGE: ${{ steps.unit.outputs.coverage }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
-
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Set up Go
-        uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3.6.1
-        with:
-          go-version: 1.24
-
-      - name: Install project dependencies
-        run: |
-          go mod download
-      - name: Run Unit Tests
-        id: unit
-        run: |
-          go test -v -coverprofile=coverage.out ./...
-
-  basic-benchmarks:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
-        with:
-          egress-policy: audit
-
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Set up Go
-        uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3.6.1
-        with:
-          go-version: 1.24
-
       - name: Set up Rust
         uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4 # v1.11.0
 
@@ -80,15 +30,15 @@ jobs:
         run: |
           go mod download
 
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@82dee4ba654bd2146511f85f0d013af94670c4de # v1.4.0
-
       - name: Cache binaries
         uses: actions/cache@2f8e54208210a422b2efd51efaa6bd6d7ca8920f # v3.4.3
         id: cache-bin
         with:
           path: ${{ runner.temp }}/bin
           key: ${{ runner.os }}-binaries
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@82dee4ba654bd2146511f85f0d013af94670c4de # v1.4.0
 
       - name: Build Contracts
         run: |
@@ -120,11 +70,25 @@ jobs:
           echo "binaries compiled:"
           ls -la ${{ runner.temp }}/bin
 
-      - name: Run examples
-        id: op-program
+      - name: Run Basic Benchmarks
+        id: unit
         run: |
-          curl https://mise.run | sh
-          pushd op-program
-          mise x -- ./build.sh
-          popd
+          mkdir ${{ runner.temp }}/data-dir
+          mkdir ${{ runner.temp }}/output
+
           ./.github/scripts/run-example-benchmarks.sh ${{ runner.temp }}
+
+      - name: Build Report
+        run: |
+          cp -r ${{ runner.temp }}/output/ ./output/
+          pushd report
+          npm install
+          npm run build
+          popd
+
+      # upload to github actions artifact
+      - name: Upload Report
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
+        with:
+          name: report
+          path: report/dist/
