--- a/configs/examples/ecpairing.yml
+++ b/configs/examples/ecpairing.yml
@@ -18,9 +18,7 @@ payloads:
     contract_bytecode: Precompile
 
 benchmarks:
-  - benchmark:
-      - sequencer
-    variables:
+  - variables:
       - type: payload
         values:
           - ecpairing
