--- a/configs/examples/erc20.yml
+++ b/configs/examples/erc20.yml
@@ -18,9 +18,7 @@ payloads:
     gas_per_tx: 10000000
 
 benchmarks:
-  - benchmark:
-      - sequencer
-    variables:
+  - variables:
       - type: payload
         value: erc20
       - type: node_type
