--- a/configs/examples/sload.yml
+++ b/configs/examples/sload.yml
@@ -18,9 +18,7 @@ payloads:
     contract_bytecode: Precompile
 
 benchmarks:
-  - benchmark:
-      - sequencer
-    variables:
+  - variables:
       - type: payload
         value: sload
       - type: node_type
